<resources>
    <string name="app_id">1145352435491866</string>
    <string name="app_name">PartyWolf</string>
    <string name="alpha_date">Welcome to Alpha 1.0.0.  This is the date page.</string>
    <string name="alpha_hype">Welcome to Alpha 1.0.0.  This is the hype page.</string>
    <string name="alpha_add">Welcome to Alpha 1.0.0.  This is the add page.</string>
    <string name="alpha_settings">Welcome to Alpha 1.0.0.  This is the settings page.</string>
    <string name="email_back">Back</string>
    <string name="date">Date</string>
    <string name="hype">Hype</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hype">Hype</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username">you@university.edu</string>
    <string name="password">mypassword1234</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="learn_more">Learn More</string>
    <string name="title_activity_learn__more">Learn_More</string>
    <string name="password_again">Please Re-Enter Your Password</string>
    <string name="log_out">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="new_post">New Post</string>
    <string name="submit">Submit</string>
    <string name="event_name_title">Event Name</string>
    <string name="other_things">Other things such as day, time, type of food, theme of party, etc...</string>
    <string name="one_emoji">Emoji</string>
    <string name="thanks_for_new_event">Thank you for adding a new event!</string>
    <string name="one_emoji_only">enter only one emoji</string>
    <string name="enter_a_title"> enter a title for this event</string>
    <string name="enter_a_description"> enter a description for this event</string>
    <string name="enter_an_emoji"> enter an emoji</string>
    <string name="enter_an_emoji2">Please enter a valid emoji.</string>
    <string name="presented_by">Presented/Hosted by</string>
    <string name="enter_a_host">enter a host for the event</string>
    <string name="new_date">Press here to enter the date of the event</string>
    <string name="new_time">Press here to enter the time of the event</string>
    <string name="empty">""</string>
    <string name="space">" "</string>
    <string name="comma">", "</string>
    <string name="colon">":"</string>
    <string name="zero">"0"</string>
    <string name="fee">$0.00</string>
    <string name="enter_a_fee">enter a fee for attending the event</string>
    <string name="events_sorted">Events sorted by hype</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string-array name="classof">
        <item>I am</item>
        <item>Proudly</item>
        <item>Loyal to</item>
        <item>I love</item>
    </string-array>
    <string-array name="classnumber">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
    </string-array>
    <string name="one">"1"</string>
    <string name="two">"2"</string>
    <string name="three">"3"</string>
    <string name="four">"4"</string>
    <string name="five">"5"</string>
    <string name="six">"6"</string>
    <string name="seven">"7"</string>
    <string name="eight">"8"</string>
    <string name="nine">"9"</string>
    <string name="ten">"10"</string>
    <string name="eleven">"11"</string>
    <string name="twelve">"12"</string>
    <string name="jan">"Jan"</string>
    <string name="feb">"Feb"</string>
    <string name="mar">"Mar"</string>
    <string name="apr">"Apr"</string>
    <string name="may">"May"</string>
    <string name="jun">"Jun"</string>
    <string name="jul">"Jul"</string>
    <string name="aug">"Aug"</string>
    <string name="sep">"Sep"</string>
    <string name="oct">"Oct"</string>
    <string name="nov">"Nov"</string>
    <string name="dec">"Dec"</string>
    <string name="event_description">Other things such as day, time, type of food, theme of party, etc...</string>
    <string name="on_campus">On or Off Campus?</string>
    <string name="please">"Please "</string>
    <string name="enter_a_username"> enter a username</string>
    <string name="enter_a_password"> enter a password</string>
    <string name="and">", and "</string>
    <string name="period">.</string>
    <string name="enter_same_password">confirm password.</string>
    <string name="my_account">My Account</string>
    <string name="notify_me">Notify Me</string>
    <string name="other_stuff">Other Stuff</string>
    <string name="title_activity_privacy">Privacy</string>
    <string name="title_activity_terms_of_service">Terms of Service</string>
    <string name="action_settings">Settings</string>
    <string name="contact_us">To contact us, please email support@aloalabs.com</string>
    <string name="email">Your .edu email address will be used to validate that you are a student as well as place you in the correct Wolf Pack</string>
</resources>