<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrayBackground"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/ColorPrimary">

        <Button
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            style="@style/add_button_text_white"
            android:onClick="openPrevious" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/new_post"
            android:text="@string/new_post"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="11dp"
            android:background="@drawable/blue_blue_button"
            style="@style/new_post"
            android:textSize="24sp"
            android:paddingBottom="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="5dp"
            android:text="@string/submit"
            android:textSize="18sp"
            android:id="@+id/post"
            android:background="@android:color/transparent"
            style="@style/add_button_text_white"
            android:onClick="newPost"
            android:visibility="visible"/>

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="#ffffff"
        android:layout_below="@id/topBar">

        <com.aolalabs.partywolf.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/event_name_title"
            android:textSize="20sp"
            android:id="@+id/event_name_title"
            android:textColorHint="#d3d3d3"
            android:textColor="@color/Black"
            android:singleLine="true"
            android:nextFocusDown="@+id/event_description"/>

        <com.aolalabs.partywolf.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:hint="@string/event_description"
            android:id="@+id/event_description"
            android:textColorHint="#d3d3d3"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:gravity="top"
            android:singleLine="false"
            android:nextFocusDown="@+id/horizontal_layout"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/bottom_container">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:id="@+id/detail_container1"
            android:nextFocusRight="@+id/fee">

            <com.aolalabs.partywolf.CustomEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fee"
                android:text="@string/fee"
                android:inputType="numberDecimal"
                android:textColorHint="#d3d3d3"
                android:textColor="@color/Black"
                android:singleLine="true"
                android:nextFocusDown="@+id/one_emoji" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_campus"
                    android:textSize="15sp"
                    android:textColor="@color/Black"
                    android:singleLine="true"
                    android:gravity="right"
                    android:paddingRight="5dp"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/on_campus"
                    android:paddingRight="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/detail_container2">

            <com.aolalabs.partywolf.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/one_emoji"
                android:textSize="20sp"
                android:inputType="textShortMessage"
                android:id="@+id/one_emoji"
                android:textColorHint="#d3d3d3"
                android:textColor="@color/Black"
                android:layout_weight="5"
                android:singleLine="true"
                android:nextFocusDown="@+id/presented_by"/>

            <com.aolalabs.partywolf.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/presented_by"
                android:textSize="20sp"
                android:id="@+id/presented_by"
                android:textColorHint="#d3d3d3"
                android:textColor="@color/Black"
                android:layout_weight="2"
                android:singleLine="true"
                android:nextFocusDown="@+id/new_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/date">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:hint="Tap to add the date/time"
                android:id="@+id/date_text"
                android:textColorHint="#d3d3d3"
                android:textSize="20sp"
                android:gravity="left"
                android:padding="12dp"
                android:textColor="@color/Black"
                android:layout_weight="2"
                android:singleLine="true"
                android:onClick="setDate:"
                android:visibility="visible"/>

        </LinearLayout>

        </LinearLayout>

        <!--<Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/new_date"
            android:textSize="15sp"
            android:id="@+id/new_date"
            android:background="#73e773"
            style="@style/add_button_text_white"
            android:onClick="setDate"/>-->

    </LinearLayout>

</RelativeLayout>